Barra de navegacion y obtencion de datos en pantalla

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
     <a href="#home" class="active">Home</a>
     <a href="/aptitud">Aptitudes</a>
     <a href="/actitud">Actitudes</a>
-    <a href="/alumnos">About</a>
-    <a href="/materias">About</a>
-    <a href="/maestros">About</a>
-    <a href="/cursos">About</a>
+    <a href="/alumnos">Alumnos</a>
+    <a href="/materias">Materias</a>
+    <a href="/maestros">Maestros</a>
+    <a href="/cursos">Cursos</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
