--- a/src/app/components/aptitudes/aptitudes.component.html
+++ b/src/app/components/aptitudes/aptitudes.component.html
@@ -8,13 +8,13 @@
         <table>
           <thead>
             <tr>
-              <th>#</th>
+              <th>ID</th>
               <th>Aptitud</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let aptitud of aptitudes, let i = index">
-              <th scope="row">{{i+1}}</th>
+            <tr *ngFor="let aptitud of aptitudes">
+              <th scope="row">{{ aptitud.idaptitud }}</th>
               <td>{{ aptitud.apt }}</td>
             </tr>
           </tbody>
